// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Value overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
  color: #69768C;
  margin-right: 4px;
  line-height: 1.25;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 16px;
  line-height: 1.25;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Darrel Labadie
    </span>
    <span
      class="emotion-2"
    >
      Seamus McGlynn
    </span>
  </div>
</DocumentFragment>
`;

exports[`Value overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
  color: #69768C;
  margin-right: 4px;
  line-height: 1.25;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 16px;
  line-height: 1.25;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Pietro Kassulke
    </span>
    <span
      class="emotion-2"
    >
      Miss Ines Kemmer
    </span>
  </div>
</DocumentFragment>
`;

exports[`Value overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
  color: #69768C;
  margin-right: 4px;
  line-height: 1.25;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 16px;
  line-height: 1.25;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Billy Kuvalis PhD
    </span>
    <span
      class="emotion-2"
    >
      Marvin Krajcik
    </span>
  </div>
</DocumentFragment>
`;

exports[`Value overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
  color: #69768C;
  margin-right: 4px;
  line-height: 1.25;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 16px;
  line-height: 1.25;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Eino Anderson
    </span>
    <span
      class="emotion-2"
    >
      Carter Swift
    </span>
  </div>
</DocumentFragment>
`;

exports[`Value overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 12px;
  color: #69768C;
  margin-right: 4px;
  line-height: 1.25;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-size: 16px;
  line-height: 1.25;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Cali Hilpert
    </span>
    <span
      class="emotion-2"
    >
      Mrs. Ulises Batz
    </span>
  </div>
</DocumentFragment>
`;
